# gh-reusable

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yml  defaults.json  defaults.schema.json  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  vite.config.base.mts
.github/: copilot-instructions.md  dependabot.yml
.specify/: feature.json  init-options.json  integration.json
actions/docker-facts/: .dockerignore  .gitignore  .pdm-python  .prettierignore  ARCHITECTURE.md  Dockerfile  README.md  action.yaml  action.yml  index.js  index.mjs  index.py  index.test.js  jest.config.js  jest.setup.js  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json  vite.config.mts  vite.config.ts
actions/docker-facts/.github/workflows/: test.yml
actions/docker-facts/src/: docker-facts-extra.test.ts  generateTags.js  index.test.ts  index.ts  lib.test.ts  lib.ts  parseCompose.js  parseGitHubContext.js  parseLabels.js  resolveDockerContext.js  shouldPushImage.js  validateTags.js
actions/docker-facts/tests/: findComposeFile.test.js  generateTags.github-context.test.js  generateTags.test.js  parseCompose.test.js  parseDockerImageName.test.js  parseGitHubContext.test.js  resolveDockerContext.test.js  run.test.js  shouldPushImage.test.js  test_compose_resolution.py  test_coverage_gaps.py  test_docker_compose.py  test_docker_facts.py  test_dockerfile_resolution.py  test_event_data.py  test_main_function.py  test_nested_paths.py  test_path_handling.py  test_push_decision.py  test_tag_generation.py  test_utils.py  validateTags.test.js
scripts/: generate-ci-skill.ts  pin-github-actions.mts  upgrade-dagger.mts
(+199 files in other folders)
