[project]
name = "docker-facts"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Bruno", email = "michael@mbround18.xyz"},
    {name = "mbround18", email = "michael.bruno1337@gmail.com"},
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "pyyaml>=6",
    "ruff>=0.11.5",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
lint = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.2.0",
]

[tool.pdm.scripts]
test = "pytest -v tests/"
