[project]
name = "docker-facts"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Bruno", email = "michael@mbround18.xyz"},
    {name = "mbround18", email = "michael.bruno1337@gmail.com"},
]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "pyyaml>=6.0.2",
    "ruff>=0.12.7",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
[dependency-groups]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
lint = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
]

[project.scripts]
test = "pytest -v tests/"
